--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <body>
       <article id="animal-list"></article>
       <article id="order-form"></article>
+      <article id="commission-form"></article>
 
       <script src="./bundle.js"></script>
     </body>
